--- a/platforms/common/scss/admin/_layout-manager.scss
+++ b/platforms/common/scss/admin/_layout-manager.scss
@@ -213,6 +213,8 @@
 
             > .section {
                 border-bottom: 14px solid #eee;
+                margin-top: 0;
+                margin-bottom: 0;
 
                 &:last-child {
                     border-bottom: 0;
